<?xml version="1.0"?>
<package format="2">
  <name>t_rex_runner</name>
  <version>0.0.1</version>
  <description>ROS package of the T-Rex runner from Google Chrome</description>
  <maintainer email="Alpaca-zip@todo.todo">Alpaca-zip</maintainer>
  <license>Apache 2.0</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
</package>